# codex-stats

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: json-schema.md  roadmap.md
examples/grafana/: codex-stats-dashboard.json  grafana-alloy.alloy
src/codex_stats/: __init__.py  cli.py  completions.py  config.py  display.py  ingest.py  metrics.py  models.py  otel.py  transfer.py  watch_state.py
tests/: test_cli.py  test_config.py  test_metrics.py
