[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-stats"
version = "1.5.2"
description = "Local AI usage observability CLI for Codex sessions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Vivek" }
]
keywords = ["codex", "cli", "analytics", "sqlite", "usage"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
]

[project.scripts]
codex-stats = "codex_stats.cli:main"

[project.urls]
Homepage = "https://github.com/vivek378521/codex-stats"
Repository = "https://github.com/vivek378521/codex-stats"
Issues = "https://github.com/vivek378521/codex-stats/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
